# be18-2nd-SixSpecs-SpecGuard

./: .gitignore  README.md
.github/: CODEOWNERS
.github/workflows/: validate-branch.yml
backend/: .gitignore  README.md  build.gradle  settings.gradle
backend/src/main/java/com/beyond/specguard/: BackendApplication.java
backend/src/main/java/com/beyond/specguard/event/: CertificateVerificationEvent.java  CrawlingCompletionScheduler.java  PythonCrawlerClient.java  ResumeSubmittedEvent.java  ResumeSubmittedListener.java
backend/src/main/java/com/beyond/specguard/resume/: ApiResponse.java  Resume.java  (+2 more)
backend/src/main/java/resource/static/: verify.html
backend/src/main/resources/: application.properties  application.yml  ddl.sql  table.sql
backend/src/main/resources/static/: verify.html
python-server/: .gitignore  code_review  db.py  dummy_storage.py  init_db.py  models.py  pyproject.toml  run.py  sitecustomize.py  test_crawler.py  tmp_dbcheck.py
python-server/app/: config.py  database.py  db.py  main.py  run.py  schemas.py  status.py
python-server/app/core/: errors.py
python-server/app/crawlers/: __init__.py  utils.py  velog_crawler.py
python-server/app/routers/: keywords.py  summary.py  velog.py
python-server/app/routes/: essay.py  keywords.py  resume.py  summary.py
python-server/app/services/: crawler_service.py  file_handler.py  gemini_client.py  gemini_service.py  jaeminae_client.py  nlp_client.py  storage_client.py
python-server/app/utils/: auth.py  codec.py  dates.py  text.py
python-server/mock/: mock_nlp.py  mock_storage.py
(+569 files in other folders)
